src/main/resources/cpp/tests/neg/N12_ambiguous_overload.cpp
void f(int) { }
void f(int& r) { }

int main() {
    int a = 42;

    f(a); // error

    return 0;
}
